# gnome-settings-power-cli

./: CLI_USAGE.txt  Cargo.toml  README.md
.github/workflows/: ci.yaml  document-cli-usage.yaml
build-aux/: document-cli-usage.py
src/: cli.rs  keyboard.rs  main.rs  screen.rs
