[package]
name = "gnome-settings-power-cli"
version = "0.1.0"
edition = "2021"
authors = ["flxzt"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
tokio = { version = "1.32", features = ["full"] }
zbus = { version = "3.14", default-features = false, features = ["tokio"] }
clap = { version = "4.4", features = ["derive"] }
